# docker-code-server-ides

./: Makefile  README.md  USAGE.md
examples/c/hello_world/: .gitignore  CMakeLists.txt  README.md
examples/c/hello_world/doc/: README.md
examples/c/hello_world/inc/: README.md
examples/c/hello_world/lib/: README.md
examples/c/hello_world/src/: README.md
examples/c/hello_world/test/: README.md
examples/rust/hello_world/: Cargo.toml
ides/c_cpp/code_config/: settings.json
ides/rust/: Containerfile
ides/rust/code_config/: settings.json
ides/x86_64_c_cpp/: Containerfile  Dockerfile
ides/x86_64_c_cpp/code_config/: settings.json
src/: container_build  container_connect  container_remove  container_start  container_stop  docker_build  docker_install  docker_remove  docker_start  docker_stop  docker_uninstall
